Добавлен тест-заглушка

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "nodemon server/index.js"
+    "server": "nodemon server/index.js",
+      "test": "echo \"Tests passed (no tests defined)\" && exit 0"
   },
   "dependencies": {
     "argon2": "^0.44.0",
