--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "nodemon server/index.js",
-      "test": "echo \"Tests passed (no tests defined)\" && exit 0"
+    "test": "echo \"Tests passed (no tests defined)\" && exit 0"
   },
   "dependencies": {
     "argon2": "^0.44.0",
@@ -23,6 +23,7 @@
     "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
     "styled-components": "^6.1.19"
